--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ span {
 }	
 
 .locateUs_background{
-  background-image: url(../images/fondodehojas.jpg);
+  background-image: url(./images/fondodehojas.jpg);
   height: fit-content;
   width: 100%;
   background-size: cover;
