--- a/Styles/proyectos_Styles.css
+++ b/Styles/proyectos_Styles.css
@@ -7,7 +7,7 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: "Nunito", sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 :root {
   --bg-color: #f2f2f2; /* Gris claro */
